--- a/code/test_load_data.ipynb
+++ b/code/test_load_data.ipynb
@@ -2,19 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket_name = '20240909-hikaru'\n",
+    "key = \"TrainingData/2025_0506_2024_1031_CSH_10000_training_fx_0_0_25_fHB_0_01_1/DL_nImages10000.mat\"\n",
+    "test_key = \"TrainingData/2025_0506_2024_1031_CSH_10000_training_fx_0_0_25_fHB_0_01_1/Parameters.mat\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 3.51G/3.51G [05:23<00:00, 10.9MB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stream_data_from_s3(bucket_name, key):\n",
+    "    s3 = boto3.client('s3')\n",
+    "\n",
+    "    metadata = s3.head_object(Bucket=bucket_name, Key=key)\n",
+    "    total_size = metadata['ContentLength']\n",
+    "\n",
+    "    response = s3.get_object(Bucket=bucket_name, Key=key)\n",
+    "    stream = response['Body']\n",
+    "\n",
+    "    buffer = io.BytesIO()\n",
+    "    with tqdm(total=total_size, unit='B', unit_scale=True, desc='Downloading') as pbar:\n",
+    "        for chunk in iter(lambda: stream.read(1024 * 1024), b''):  # 1MB chunks\n",
+    "            buffer.write(chunk)\n",
+    "            pbar.update(len(chunk))\n",
+    "\n",
+    "    buffer.seek(0)\n",
+    "    return buffer.read()\n",
+    "\n",
+    "# byte_data = stream_data_from_s3(bucket_name, key)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gtx",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
