update in preprocess

--- a/code/test_preprocess.ipynb
+++ b/code/test_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,20 +15,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    \"fluorescence\": 10**4,\n",
+    "    \"reflectance\": 1,\n",
+    "    \"depth\": 1,\n",
+    "    \"mu_a\": 10,\n",
+    "    \"mu_s\": 1,\n",
+    "    \"concentration_fluor\": 1\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scale_data(data_dict, params):\n",
     "    scaled_data_dict = {}\n",
-    "    for key, factor in data_dict.items():\n",
-    "        scaled_data_dict[key] = data_dict[key] * factor\n",
+    "    for key, items in data_dict.items():\n",
+    "        scaled_data_dict[key] = items * params[key]\n",
     "    return scaled_data_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,42 +88,22 @@
     "        'mu_s': mu_s_norm,\n",
     "        'concentration_fluor': concentration_fluor\n",
     "        }, scale_params)\n",
-    "    \n"
+    "    \n",
+    "    return scaled_data_dict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top-level keys in .mat file: dict_keys(['DF', 'F', 'OP', 'QF', 'RE'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = mat73.loadmat('data/20250506_test_data.mat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fluorescence = data['F']    # FL → fluorescence\n",
-    "reflectance = data['RE']  # RE → radiance of the sample\n",
-    "depth = data['DF']          # DF → depth\n",
-    "optical_props = data['OP']  # OP → optical properties (μa, μs')\n",
-    "concentration_fluor = data['QF']  # QF → corrected fluorophore concentration\n"
+    "data_dict = load_data(\"data/20250506_test_data.mat\", params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -117,18 +113,15 @@
       "(10000, 101, 101, 6)\n",
       "(10000, 101, 101, 6)\n",
       "(10000, 101, 101)\n",
-      "(10000, 101, 101, 2)\n",
+      "(10000, 101, 101)\n",
+      "(10000, 101, 101)\n",
       "(10000, 101, 101)\n"
      ]
     }
    ],
    "source": [
-    "print(fluorescence.shape)\n",
-    "print(reflectance.shape)\n",
-    "print(depth.shape)\n",
-    "print(optical_props.shape)\n",
-    "print(concentration_fluor.shape)\n",
-    "\n"
+    "for key, value in data_dict.items():\n",
+    "    print(value.shape)"
    ]
   }
  ],
