fixed but still dk

--- a/code/load_data.ipynb
+++ b/code/load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,25 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "bucket_name = '20240909-hikaru'\n",
     "key = \"TrainingData/2025_0506_2024_1031_CSH_10000_training_fx_0_0_25_fHB_0_01_1/DL_nImages10000.mat\"\n",
+    "new_key='TrainingData/20241118_10000_training_withTBR_original/nImages10000_new.mat'\n",
     "test_key = \"TrainingData/2025_0506_2024_1031_CSH_10000_training_fx_0_0_25_fHB_0_01_1/Parameters.mat\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 3.51G/3.51G [05:23<00:00, 10.9MB/s]\n"
+      "Downloading:  43%|████▎     | 1.51G/3.49G [10:22<1:04:40, 511kB/s]"
      ]
     }
    ],
@@ -55,7 +56,7 @@
     "    buffer.seek(0)\n",
     "    return buffer.read()\n",
     "\n",
-    "# byte_data = stream_data_from_s3(bucket_name, key)\n"
+    "byte_data = stream_data_from_s3(bucket_name, new_key)\n"
    ]
   }
  ],
