--- a/code/load_data.ipynb
+++ b/code/load_data.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading:  43%|████▎     | 1.51G/3.49G [10:22<1:04:40, 511kB/s]"
+      "Downloading: 100%|██████████| 3.49G/3.49G [16:32<00:00, 3.51MB/s] \n"
      ]
     }
    ],
@@ -57,6 +57,18 @@
     "    return buffer.read()\n",
     "\n",
     "byte_data = stream_data_from_s3(bucket_name, new_key)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "with open(\"../data/20241118_test_data.mat\", 'wb') as f:\n",
+    "    f.write(byte_data)"
    ]
   }
  ],
