--- a/code/visualization.ipynb
+++ b/code/visualization.ipynb
@@ -6,21 +6,193 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np"
+    "import argparse\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
+    "from tqdm import tqdm\n",
+    "from torchinfo import summary\n",
+    "\n",
+    "from model.unet import UnetModel\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "UnetModel                                [20, 1, 101, 101]         --\n",
+       "├─Sequential: 1-1                        [20, 64, 101, 101]        --\n",
+       "│    └─Conv2d: 2-1                       [20, 64, 101, 101]        1,216\n",
+       "│    └─ReLU: 2-2                         [20, 64, 101, 101]        --\n",
+       "│    └─Dropout: 2-3                      [20, 64, 101, 101]        --\n",
+       "│    └─Conv2d: 2-4                       [20, 64, 101, 101]        36,928\n",
+       "│    └─ReLU: 2-5                         [20, 64, 101, 101]        --\n",
+       "│    └─Dropout: 2-6                      [20, 64, 101, 101]        --\n",
+       "│    └─Conv2d: 2-7                       [20, 64, 101, 101]        36,928\n",
+       "│    └─ReLU: 2-8                         [20, 64, 101, 101]        --\n",
+       "│    └─Dropout: 2-9                      [20, 64, 101, 101]        --\n",
+       "├─Sequential: 1-2                        [20, 64, 6, 101, 101]     --\n",
+       "│    └─Conv3d: 2-10                      [20, 64, 6, 101, 101]     1,792\n",
+       "│    └─ReLU: 2-11                        [20, 64, 6, 101, 101]     --\n",
+       "│    └─Dropout: 2-12                     [20, 64, 6, 101, 101]     --\n",
+       "│    └─Conv3d: 2-13                      [20, 64, 6, 101, 101]     110,656\n",
+       "│    └─ReLU: 2-14                        [20, 64, 6, 101, 101]     --\n",
+       "│    └─Dropout: 2-15                     [20, 64, 6, 101, 101]     --\n",
+       "│    └─Conv3d: 2-16                      [20, 64, 6, 101, 101]     110,656\n",
+       "│    └─ReLU: 2-17                        [20, 64, 6, 101, 101]     --\n",
+       "│    └─Dropout: 2-18                     [20, 64, 6, 101, 101]     --\n",
+       "├─Sequential: 1-3                        [20, 256, 101, 101]       --\n",
+       "│    └─Conv2d: 2-19                      [20, 256, 101, 101]       1,032,448\n",
+       "│    └─ReLU: 2-20                        [20, 256, 101, 101]       --\n",
+       "│    └─Conv2d: 2-21                      [20, 256, 101, 101]       590,080\n",
+       "│    └─ReLU: 2-22                        [20, 256, 101, 101]       --\n",
+       "├─MaxPool2d: 1-4                         [20, 256, 50, 50]         --\n",
+       "├─Sequential: 1-5                        [20, 512, 50, 50]         --\n",
+       "│    └─Conv2d: 2-23                      [20, 512, 50, 50]         1,180,160\n",
+       "│    └─ReLU: 2-24                        [20, 512, 50, 50]         --\n",
+       "│    └─Conv2d: 2-25                      [20, 512, 50, 50]         2,359,808\n",
+       "│    └─ReLU: 2-26                        [20, 512, 50, 50]         --\n",
+       "├─MaxPool2d: 1-6                         [20, 512, 25, 25]         --\n",
+       "├─Sequential: 1-7                        [20, 1024, 25, 25]        --\n",
+       "│    └─Conv2d: 2-27                      [20, 1024, 25, 25]        4,719,616\n",
+       "│    └─ReLU: 2-28                        [20, 1024, 25, 25]        --\n",
+       "│    └─Conv2d: 2-29                      [20, 1024, 25, 25]        9,438,208\n",
+       "│    └─ReLU: 2-30                        [20, 1024, 25, 25]        --\n",
+       "├─AttentionGate: 1-8                     [20, 512, 50, 50]         --\n",
+       "│    └─Sequential: 2-31                  [20, 512, 25, 25]         --\n",
+       "│    │    └─Conv2d: 3-1                  [20, 512, 25, 25]         262,656\n",
+       "│    │    └─BatchNorm2d: 3-2             [20, 512, 25, 25]         1,024\n",
+       "│    └─Sequential: 2-32                  [20, 512, 25, 25]         --\n",
+       "│    │    └─Conv2d: 3-3                  [20, 512, 25, 25]         524,800\n",
+       "│    │    └─BatchNorm2d: 3-4             [20, 512, 25, 25]         1,024\n",
+       "│    └─ReLU: 2-33                        [20, 512, 25, 25]         --\n",
+       "│    └─Sequential: 2-34                  [20, 1, 25, 25]           --\n",
+       "│    │    └─Conv2d: 3-5                  [20, 1, 25, 25]           513\n",
+       "│    │    └─BatchNorm2d: 3-6             [20, 1, 25, 25]           2\n",
+       "│    │    └─Sigmoid: 3-7                 [20, 1, 25, 25]           --\n",
+       "├─Sequential: 1-9                        [20, 512, 50, 50]         --\n",
+       "│    └─Upsample: 2-35                    [20, 1024, 50, 50]        --\n",
+       "│    └─Conv2d: 2-36                      [20, 512, 50, 50]         4,719,104\n",
+       "│    └─ReLU: 2-37                        [20, 512, 50, 50]         --\n",
+       "├─Sequential: 1-10                       [20, 512, 50, 50]         --\n",
+       "│    └─Conv2d: 2-38                      [20, 512, 50, 50]         4,719,104\n",
+       "│    └─ReLU: 2-39                        [20, 512, 50, 50]         --\n",
+       "│    └─Conv2d: 2-40                      [20, 512, 50, 50]         2,359,808\n",
+       "│    └─ReLU: 2-41                        [20, 512, 50, 50]         --\n",
+       "├─AttentionGate: 1-11                    [20, 256, 101, 101]       --\n",
+       "│    └─Sequential: 2-42                  [20, 256, 51, 51]         --\n",
+       "│    │    └─Conv2d: 3-8                  [20, 256, 51, 51]         65,792\n",
+       "│    │    └─BatchNorm2d: 3-9             [20, 256, 51, 51]         512\n",
+       "│    └─Sequential: 2-43                  [20, 256, 50, 50]         --\n",
+       "│    │    └─Conv2d: 3-10                 [20, 256, 50, 50]         131,328\n",
+       "│    │    └─BatchNorm2d: 3-11            [20, 256, 50, 50]         512\n",
+       "│    └─ReLU: 2-44                        [20, 256, 51, 51]         --\n",
+       "│    └─Sequential: 2-45                  [20, 1, 51, 51]           --\n",
+       "│    │    └─Conv2d: 3-12                 [20, 1, 51, 51]           257\n",
+       "│    │    └─BatchNorm2d: 3-13            [20, 1, 51, 51]           2\n",
+       "│    │    └─Sigmoid: 3-14                [20, 1, 51, 51]           --\n",
+       "├─Sequential: 1-12                       [20, 256, 100, 100]       --\n",
+       "│    └─Upsample: 2-46                    [20, 512, 100, 100]       --\n",
+       "│    └─Conv2d: 2-47                      [20, 256, 100, 100]       1,179,904\n",
+       "│    └─ReLU: 2-48                        [20, 256, 100, 100]       --\n",
+       "├─Sequential: 1-13                       [20, 256, 100, 100]       --\n",
+       "│    └─Conv2d: 2-49                      [20, 256, 100, 100]       1,179,904\n",
+       "│    └─ReLU: 2-50                        [20, 256, 100, 100]       --\n",
+       "│    └─Conv2d: 2-51                      [20, 256, 100, 100]       590,080\n",
+       "│    └─ReLU: 2-52                        [20, 256, 100, 100]       --\n",
+       "├─AttentionGate: 1-14                    [20, 448, 101, 101]       --\n",
+       "│    └─Sequential: 2-53                  [20, 128, 51, 51]         --\n",
+       "│    │    └─Conv2d: 3-15                 [20, 128, 51, 51]         57,472\n",
+       "│    │    └─BatchNorm2d: 3-16            [20, 128, 51, 51]         256\n",
+       "│    └─Sequential: 2-54                  [20, 128, 100, 100]       --\n",
+       "│    │    └─Conv2d: 3-17                 [20, 128, 100, 100]       32,896\n",
+       "│    │    └─BatchNorm2d: 3-18            [20, 128, 100, 100]       256\n",
+       "│    └─ReLU: 2-55                        [20, 128, 51, 51]         --\n",
+       "│    └─Sequential: 2-56                  [20, 1, 51, 51]           --\n",
+       "│    │    └─Conv2d: 3-19                 [20, 1, 51, 51]           129\n",
+       "│    │    └─BatchNorm2d: 3-20            [20, 1, 51, 51]           2\n",
+       "│    │    └─Sigmoid: 3-21                [20, 1, 51, 51]           --\n",
+       "├─Sequential: 1-15                       [20, 128, 200, 200]       --\n",
+       "│    └─Upsample: 2-57                    [20, 256, 200, 200]       --\n",
+       "│    └─Conv2d: 2-58                      [20, 128, 200, 200]       295,040\n",
+       "│    └─ReLU: 2-59                        [20, 128, 200, 200]       --\n",
+       "├─Sequential: 1-16                       [20, 128, 200, 200]       --\n",
+       "│    └─Conv2d: 2-60                      [20, 128, 200, 200]       663,680\n",
+       "│    └─ReLU: 2-61                        [20, 128, 200, 200]       --\n",
+       "├─Sequential: 1-17                       [20, 1, 200, 200]         --\n",
+       "│    └─Conv2d: 2-62                      [20, 64, 200, 200]        73,792\n",
+       "│    └─ReLU: 2-63                        [20, 64, 200, 200]        --\n",
+       "│    └─Conv2d: 2-64                      [20, 32, 200, 200]        18,464\n",
+       "│    └─ReLU: 2-65                        [20, 32, 200, 200]        --\n",
+       "│    └─Conv2d: 2-66                      [20, 1, 200, 200]         289\n",
+       "├─Sequential: 1-18                       [20, 1, 200, 200]         --\n",
+       "│    └─Conv2d: 2-67                      [20, 64, 200, 200]        73,792\n",
+       "│    └─ReLU: 2-68                        [20, 64, 200, 200]        --\n",
+       "│    └─Conv2d: 2-69                      [20, 32, 200, 200]        18,464\n",
+       "│    └─ReLU: 2-70                        [20, 32, 200, 200]        --\n",
+       "│    └─Conv2d: 2-71                      [20, 1, 200, 200]         289\n",
+       "==========================================================================================\n",
+       "Total params: 36,589,643\n",
+       "Trainable params: 36,589,643\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (Units.TERABYTES): 3.10\n",
+       "==========================================================================================\n",
+       "Input size (MB): 6.53\n",
+       "Forward/backward pass size (MB): 9507.56\n",
+       "Params size (MB): 146.36\n",
+       "Estimated Total Size (MB): 9660.45\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {\n",
+    "    'activation': 'relu',\n",
+    "    'optimizer': 'Adam',\n",
+    "    'epochs': 100,\n",
+    "    'nF': 6,\n",
+    "    'learningRate': 5e-4,\n",
+    "    'batch': 32,\n",
+    "    'xX': 101,\n",
+    "    'yY': 101,\n",
+    "    'decayRate': 0.3,\n",
+    "    'patience': 20,\n",
+    "    'scaleFL': 10e4,\n",
+    "    'scaleOP0': 10,\n",
+    "    'scaleOP1': 1,\n",
+    "    'scaleDF': 1,\n",
+    "    'scaleQF': 1,\n",
+    "    'scaleRE': 1,\n",
+    "    'nFilters3D': 128,\n",
+    "    'kernelConv3D': [3,3,3],\n",
+    "    'strideConv3D': [1,1,1],\n",
+    "    'nFilters2D': 128,\n",
+    "    'kernelConv2D': [3,3],\n",
+    "    'strideConv2D': [1,1],\n",
+    "    'data_path': 'data/'\n",
+    "}\n",
+    "\n",
+    "model = UnetModel(params)\n",
+    "summary(model, \n",
+    "        input_size=[(20,2,101,101), (20, 1, 6, 101, 101)])\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "gtx",
    "language": "python",
    "name": "python3"
   },
@@ -34,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
