--- a/code_py/test_train.ipynb
+++ b/code_py/test_train.ipynb
@@ -192,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtx",
+   "display_name": "gtx_py",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
