--- a/code_py/test_train.ipynb
+++ b/code_py/test_train.ipynb
@@ -19,6 +19,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 2.7.0+cu128\n",
+      "CUDA available: True\n",
+      "Number of GPUs: 1\n",
+      "\n",
+      "GPU 0:\n",
+      "  Name: NVIDIA GeForce RTX 5090\n",
+      "  Memory Allocated: 0.0 MB\n",
+      "  Memory Cached: 0.0 MB\n",
+      "  Capability: (12, 0)\n",
+      "  Current Device: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"PyTorch version:\", torch.__version__)\n",
+    "print(\"CUDA available:\", torch.cuda.is_available())\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"Number of GPUs:\", torch.cuda.device_count())\n",
+    "    for i in range(torch.cuda.device_count()):\n",
+    "        print(f\"\\nGPU {i}:\")\n",
+    "        print(\"  Name:\", torch.cuda.get_device_name(i))\n",
+    "        print(\"  Memory Allocated:\", round(torch.cuda.memory_allocated(i) / 1024**2, 2), \"MB\")\n",
+    "        print(\"  Memory Cached:\", round(torch.cuda.memory_reserved(i) / 1024**2, 2), \"MB\")\n",
+    "        print(\"  Capability:\", torch.cuda.get_device_capability(i))\n",
+    "        print(\"  Current Device:\", torch.cuda.current_device())\n",
+    "else:\n",
+    "    print(\"No GPU available.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -192,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtx_py",
+   "display_name": "gtx",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
