--- a/utils/preprocess/phantom_data_preprocess.ipynb
+++ b/utils/preprocess/phantom_data_preprocess.ipynb
@@ -64,25 +64,34 @@
     "    concentration = data['QF']\n",
     "\n",
     "    norm_fluorescence, norm_mu_a, norm_mu_s = normalization(fluorescence, optical_props)\n",
-    "    scaled_data_dict = scale_data({\n",
+    "    # scaled_data_dict = scale_data({\n",
+    "    #     'fluorescence': norm_fluorescence,\n",
+    "    #     'mu_a': norm_mu_a,\n",
+    "    #     'mu_s': norm_mu_s,\n",
+    "    #     'reflectance': reflectance,\n",
+    "    #     'depth': depth,\n",
+    "    #     'concentration': concentration\n",
+    "    # }, params)\n",
+    "    data_dict = {\n",
     "        'fluorescence': norm_fluorescence,\n",
     "        'mu_a': norm_mu_a,\n",
     "        'mu_s': norm_mu_s,\n",
     "        'reflectance': reflectance,\n",
     "        'depth': depth,\n",
     "        'concentration': concentration\n",
-    "    }, params)\n",
+    "    }\n",
     "\n",
-    "    scaled_data_dict['fluorescence'] = scaled_data_dict['fluorescence'].transpose(0, 3, 1, 2)\n",
-    "    op = np.stack([scaled_data_dict['mu_a'], scaled_data_dict['mu_s']], axis=1)\n",
-    "    scaled_data_dict['op'] = op\n",
-    "    scaled_data_dict['reflectance'] = scaled_data_dict['reflectance'].transpose(0, 3, 1, 2)\n",
-    "    scaled_data_dict['depth'] = scaled_data_dict['depth']\n",
-    "    scaled_data_dict['concentration'] = scaled_data_dict['concentration']\n",
-    "    del scaled_data_dict['mu_a']\n",
-    "    del scaled_data_dict['mu_s']\n",
+    "    data_dict['fluorescence'] = data_dict['fluorescence'].transpose(0, 3, 1, 2)\n",
+    "    data_dict['fluorescence'] = np.expand_dims(data_dict['fluorescence'], axis=-1)\n",
+    "    op = np.stack([data_dict['mu_a'], data_dict['mu_s']], axis=1).transpose(0, 2, 3, 1)\n",
+    "    data_dict['op'] = op\n",
+    "    data_dict['reflectance'] = data_dict['reflectance']\n",
+    "    data_dict['depth'] = data_dict['depth']\n",
+    "    data_dict['concentration'] = data_dict['concentration']\n",
+    "    del data_dict['mu_a']\n",
+    "    del data_dict['mu_s']\n",
     "\n",
-    "    return scaled_data_dict\n"
+    "    return data_dict\n"
    ]
   },
   {
@@ -106,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtx_py",
+   "display_name": "gtx_tf",
    "language": "python",
    "name": "python3"
   },
