--- a/utils/preprocess/phantom_data_preprocess.ipynb
+++ b/utils/preprocess/phantom_data_preprocess.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(path, params):\n",
+    "def load_phantom_data(path, params):\n",
     "    data = mat73.loadmat(path)\n",
     "\n",
     "    fluorescence = data['F']\n",
@@ -109,7 +109,7 @@
     "    'concentration': 1\n",
     "}\n",
     "path = '/home/victorhuang/projects/gtx/data/phantom_data.mat'\n",
-    "results = read_data(path, scale_params)"
+    "results = load_phantom_data(path, scale_params)"
    ]
   }
  ],
