--- a/numerical/qDFI.ipynb
+++ b/numerical/qDFI.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# deprecated?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
