update get opt prop

--- a/numerical/optical_prop_util.ipynb
+++ b/numerical/optical_prop_util.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,14 @@
     "\n",
     "import numpy as np\n",
     "import mat73\n",
+    "import json\n",
     "import scipy.io as sio\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,8 +237,13 @@
     "        \"\"\"\n",
     "        # Fill in the actual lists with full data or load from a file\n",
     "        Wavelength = np.arange(250, 1301)  # List of wavelengths (nm)\n",
-    "        HbO2 = np.array([])\n",
-    "        Hb = np.array([])         \n",
+    "        with open(\"numerical/hbo2.json\", \"r\") as f:\n",
+    "            HbO2 = json.load(f)\n",
+    "        with open(\"numerical/hb.json\", \"r\") as f:\n",
+    "            Hb = json.load(f)         \n",
+    "        \n",
+    "        HbO2 = np.array(HbO2)\n",
+    "        Hb = np.array(Hb)\n",
     "\n",
     "        # Convert to mm^-1/(g/L)\n",
     "        HbO2 = HbO2 / 10.0\n",
@@ -264,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,6 +380,43 @@
     "    mus_m = mus_scale_emission * mus_x\n",
     "\n",
     "    return mua_m, mus_m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# stupid test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excitation wavelength (λₓ): 660 nm\n",
+      "Emission wavelength (λₘ): 700 nm\n",
+      "Original mua_x: 0.01500 mm⁻¹ → Extrapolated mua_m: 0.01178 mm⁻¹\n",
+      "Original mus_x: 1.00000 mm⁻¹ → Extrapolated mus_m: 0.86830 mm⁻¹\n"
+     ]
+    }
+   ],
+   "source": [
+    "mua_x = 0.015\n",
+    "mus_x = 1.0\n",
+    "lambda_x = 660\n",
+    "lambda_m = 700\n",
+    "\n",
+    "mua_m, mus_m = extrapolate_opt_prop(mua_x, mus_x, lambda_x, lambda_m, absorber='Hb', scatterer='Intralipid')\n",
+    "\n",
+    "print(f\"Excitation wavelength (λₓ): {lambda_x} nm\")\n",
+    "print(f\"Emission wavelength (λₘ): {lambda_m} nm\")\n",
+    "print(f\"Original mua_x: {mua_x:.5f} mm⁻¹ → Extrapolated mua_m: {mua_m:.5f} mm⁻¹\")\n",
+    "print(f\"Original mus_x: {mus_x:.5f} mm⁻¹ → Extrapolated mus_m: {mus_m:.5f} mm⁻¹\")\n"
    ]
   }
  ],
