--- a/code_kan/train_kan.ipynb
+++ b/code_kan/train_kan.ipynb
@@ -6,15 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
+    "import os\n",
+    "os.chdir('/home/victorhuang/projects/gtx/')\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
-    "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
-    "from tqdm import tqdm\n",
-    "from torchinfo import summary\n",
     "\n",
-    "from model.unet import UnetModel\n"
+    "from kan import *\n",
+    "from code_kan.kan_preprocess import load_data\n"
    ]
   },
   {
@@ -26,15 +25,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 2.7.0+cu128\n",
+      "PyTorch version: 2.2.2+cu121\n",
       "CUDA available: True\n",
       "Number of GPUs: 1\n",
       "\n",
       "GPU 0:\n",
-      "  Name: NVIDIA GeForce RTX 5090\n",
+      "  Name: NVIDIA GeForce RTX 4070 Laptop GPU\n",
       "  Memory Allocated: 0.0 MB\n",
       "  Memory Cached: 0.0 MB\n",
-      "  Capability: (12, 0)\n",
+      "  Capability: (8, 9)\n",
       "  Current Device: 0\n"
      ]
     }
@@ -57,46 +56,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# load data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    'activation': 'relu',\n",
-    "    'optimizer': 'Adam',\n",
-    "    'epochs': 100,\n",
-    "    'nF': 6,\n",
-    "    'learningRate': 5e-4,\n",
-    "    'batch': 32,\n",
-    "    'xX': 101,\n",
-    "    'yY': 101,\n",
-    "    'decayRate': 0.3,\n",
-    "    'patience': 20,\n",
-    "    'scaleFL': 10e4,\n",
-    "    'scaleOP0': 10,\n",
-    "    'scaleOP1': 1,\n",
-    "    'scaleDF': 1,\n",
-    "    'scaleQF': 1,\n",
-    "    'scaleRE': 1,\n",
-    "    'nFilters3D': 128,\n",
-    "    'kernelConv3D': [3,3,3],\n",
-    "    'strideConv3D': [1,1,1],\n",
-    "    'nFilters2D': 128,\n",
-    "    'kernelConv2D': [3,3],\n",
-    "    'strideConv2D': [1,1],\n",
-    "    'data_path': 'data/'\n",
-    "}\n",
+    "dt_data_path = 'data/20241118_data_splited.mat'\n",
+    "data = load_data(dt_data_path, data_type='dt')\n",
     "\n",
-    "model = UnetModel(params)\n",
-    "summary(model, \n",
-    "        input_size=[(20,2,101,101), (20, 1, 6, 101, 101)])\n"
+    "train_data = data['train']\n",
+    "train_fluorescence = train_data['fluorescence']\n",
+    "train_op = train_data['op']\n",
+    "train_depth = train_data['depth']\n",
+    "train_concentration_fluor = train_data['concentration_fluor']\n",
+    "train_reflectance = train_data['reflectance']\n",
+    "\n",
+    "val_data = data['val']\n",
+    "val_fluorescence = val_data['fluorescence']\n",
+    "val_op = val_data['op']\n",
+    "val_depth = val_data['depth']\n",
+    "val_concentration_fluor = val_data['concentration_fluor']\n",
+    "val_reflectance = val_data['reflectance']\n",
+    "\n",
+    "test_data = data['test']\n",
+    "test_fluorescence = test_data['fluorescence']\n",
+    "test_op = test_data['op']\n",
+    "test_depth = test_data['depth']\n",
+    "test_concentration_fluor = test_data['concentration_fluor']\n",
+    "test_reflectance = test_data['reflectance']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KAN"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtx_py",
+   "display_name": "pk",
    "language": "python",
    "name": "python3"
   },
@@ -110,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
