--- a/numerical/analytical_1.ipynb
+++ b/numerical/analytical_1.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('/home/victorhuang/projects/gtx/')\n",
-    "# os.chdir('/home/victorh/projects/gtx/')\n",
+    "# os.chdir('/home/victorhuang/projects/gtx/')\n",
+    "os.chdir('/home/victorh/projects/gtx/')\n",
     "\n",
     "import numpy as np\n",
     "import mat73\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,12 @@
     "\n",
     "dt_data_path = 'data/20241118_data_splited.mat'\n",
     "phantom_data_path = 'data/phantom_data.mat'\n",
-    "cylinder_data_path_r2 = 'data/cylinder/h1_r5_d3.mat'"
+    "cylinder_data_path_r2 = 'data/cylinder/h5_r15_d3.mat'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,14 +734,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_20229/1858424392.py:18: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_892/1858424392.py:18: RuntimeWarning: invalid value encountered in divide\n",
       "  smoothed = num / den\n"
      ]
     },
@@ -1506,7 +1506,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtx_py",
+   "display_name": "py_tor",
    "language": "python",
    "name": "python3"
   },
@@ -1520,7 +1520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
