--- a/utils/kan_cleaning/split.ipynb
+++ b/utils/kan_cleaning/split.ipynb
@@ -48,15 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved split data to data/newKAN/2000_small_shallow_split.mat\n",
-      "Saved split data to data/newKAN/2000_medium_shallow_split.mat\n",
-      "Saved split data to data/newKAN/2000_large_shallow_split.mat\n",
-      "Saved split data to data/newKAN/2000_small_deep_split.mat\n",
-      "Saved split data to data/newKAN/2000_medium_deep_split.mat\n",
-      "Saved split data to data/newKAN/2000_large_deep_split.mat\n",
-      "Saved split data to data/newKAN/2000_small_sheep_split.mat\n",
-      "Saved split data to data/newKAN/2000_medium_sheep_split.mat\n",
-      "Saved split data to data/newKAN/2000_large_sheep_split.mat\n"
+      "Saved split data to data/20241118_data_split_6566.mat\n"
      ]
     }
    ],
@@ -70,7 +62,7 @@
     "    concentration_fluor = data['QF']  \n",
     "\n",
     "    n_samples = data['F'].shape[0]\n",
-    "    train_idx, val_idx, test_idx = split_indices(n_samples)\n",
+    "    train_idx, val_idx, test_idx = split_indices(n_samples, random_state=6566)\n",
     "\n",
     "    split_data = {\n",
     "        'train_fluorescence': fluorescence[train_idx],\n",
@@ -97,15 +89,7 @@
     "    sio.savemat(save_path, split_data)\n",
     "    print(f\"Saved split data to {save_path}\")\n",
     "\n",
-    "split_save('data/newKAN/2000_small_shallow.mat', 'data/newKAN/2000_small_shallow_split.mat')\n",
-    "split_save('data/newKAN/2000_medium_shallow.mat', 'data/newKAN/2000_medium_shallow_split.mat')\n",
-    "split_save('data/newKAN/2000_large_shallow.mat', 'data/newKAN/2000_large_shallow_split.mat')\n",
-    "split_save('data/newKAN/2000_small_deep.mat', 'data/newKAN/2000_small_deep_split.mat')\n",
-    "split_save('data/newKAN/2000_medium_deep.mat', 'data/newKAN/2000_medium_deep_split.mat')\n",
-    "split_save('data/newKAN/2000_large_deep.mat', 'data/newKAN/2000_large_deep_split.mat')\n",
-    "split_save('data/newKAN/2000_small_sheep.mat', 'data/newKAN/2000_small_sheep_split.mat')\n",
-    "split_save('data/newKAN/2000_medium_sheep.mat', 'data/newKAN/2000_medium_sheep_split.mat')\n",
-    "split_save('data/newKAN/2000_large_sheep.mat', 'data/newKAN/2000_large_sheep_split.mat')"
+    "split_save('data/20241118_data.mat', 'data/20241118_data_split_6566.mat')"
    ]
   }
  ],
