--- a/utils/kan_cleaning/split.ipynb
+++ b/utils/kan_cleaning/split.ipynb
@@ -40,15 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6c97ed42",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved split data to data/20241118_data_split_6566.mat\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -62,13 +66,13 @@
     "    concentration_fluor = data['QF']  \n",
     "\n",
     "    n_samples = data['F'].shape[0]\n",
-    "    train_idx, val_idx, test_idx = split_indices(n_samples, random_state=6566)\n",
+    "    train_idx, val_idx, test_idx = split_indices(n_samples, random_state=42)\n",
     "\n",
     "    split_data = {\n",
     "        'train_fluorescence': fluorescence[train_idx],\n",
     "        'val_fluorescence': fluorescence[val_idx],\n",
     "        'test_fluorescence': fluorescence[test_idx],\n",
-    "\n",
+    "        \n",
     "        'train_optical_props': optical_props[train_idx],\n",
     "        'val_optical_props': optical_props[val_idx],\n",
     "        'test_optical_props': optical_props[test_idx],\n",
@@ -89,7 +93,7 @@
     "    sio.savemat(save_path, split_data)\n",
     "    print(f\"Saved split data to {save_path}\")\n",
     "\n",
-    "split_save('data/20241118_data.mat', 'data/20241118_data_split_6566.mat')"
+    "split_save('data/3DNoise/20241118_data_3D.mat', 'data/3DNoise/20241118_data_3D_splited.mat')"
    ]
   }
  ],
