--- a/numerical/analytical_iceberg.ipynb
+++ b/numerical/analytical_iceberg.ipynb
@@ -1149,6 +1149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.0001 - 0.1  mua\n",
+    "1-2 mus\n",
+    "nrel 1.4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
