--- a/utils/inspect.ipynb
+++ b/utils/inspect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "292401ae",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,15 @@
     "import mat73 \n",
     "\n",
     "import os\n",
-    "os.chdir('/home/victorh/projects/gtx/utils')\n",
+    "# os.chdir('/home/victorh/projects/gtx/utils')\n",
+    "os.chdir('/home/victorhuang/projects/gtx/utils')\n",
     "\n",
     "from draw_stuff import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9fe33d05",
    "metadata": {},
    "outputs": [],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3839882d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b4172c03",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ef145494",
    "metadata": {},
    "outputs": [],
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "4174ade6",
    "metadata": {},
    "outputs": [],
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "eb742b12",
    "metadata": {},
    "outputs": [],
@@ -121,6 +122,41 @@
     "    assert sample_1['concentration_fluor'].shape == (1000, 100, 100)\n",
     "    print(f\"finished reading {sample_1['op'].shape[0]} images\")\n",
     "    return sample_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6dc7481b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = read_mat_data('../data/DL_nImages1000.mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dd9c0b55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.050162114\n",
+      "1.6236666\n",
+      "0.01079325\n",
+      "0.40413398\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(sample['op'][..., 0]))\n",
+    "print(np.mean(sample['op'][..., 1]))\n",
+    "\n",
+    "print(np.std(sample['op'][..., 0]))\n",
+    "print(np.std(sample['op'][..., 1]))\n"
    ]
   },
   {
@@ -238,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "79eac003",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(9996):\n",
-    "    d = get_data(i, stacked)\n",
+    "for i in range(1000):\n",
+    "    d = get_data(i, sample)\n",
     "    mua = d['op'][..., 0]\n",
     "    mus = d['op'][..., 1]\n",
     "    \n",
@@ -312,7 +348,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytor",
+   "display_name": "gtx_tf",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
