--- a/code_py/test_train.ipynb
+++ b/code_py/test_train.ipynb
@@ -96,7 +96,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gtx_py",
+   "display_name": "pytor",
    "language": "python",
    "name": "python3"
   },
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
