--- a/utils/inspect.ipynb
+++ b/utils/inspect.ipynb
@@ -126,12 +126,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6dc7481b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = read_mat_data('../data/DL_nImages1000.mat')"
+    "sample = read_mat_data('../data/finalized/ts_3d_10000_original_noTBR.mat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6f00d55b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from draw_stuff import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ee75b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 101, 101, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sample['fluorescence'].shape)"
    ]
   },
   {
@@ -274,18 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "79eac003",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1000):\n",
+    "for i in range(10000):\n",
     "    d = get_data(i, sample)\n",
     "    mua = d['op'][..., 0]\n",
     "    mus = d['op'][..., 1]\n",
     "    \n",
     "    assert np.mean(mua) > 0\n",
-    "    assert np.mean(mus) > 0.9\n",
+    "    assert np.mean(mus) > 0.5\n",
     "        "
    ]
   },
