--- a/utils/inspect.ipynb
+++ b/utils/inspect.ipynb
@@ -126,12 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6dc7481b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = read_mat_data('../data/finalized/ts_3d_10000_original_noTBR.mat')"
+    "sample = read_mat_data('../data/DL_nImages1000_newOP_elecNoise.mat')"
    ]
   },
   {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1ee75b86",
    "metadata": {},
    "outputs": [
@@ -324,8 +324,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    d = get_data(i, sample_10_drop)\n",
+    "for i in range(10000):\n",
+    "    d = get_data(i, sample)\n",
     "    mean_val = np.mean(d['op'][..., 0])\n",
     "    \n",
     "    if np.isnan(mean_val):\n",
